PAI-10: added new api method
